--- a/src/css/HomePageCss/hero.css
+++ b/src/css/HomePageCss/hero.css
@@ -54,9 +54,10 @@
 	background:#f0af00;
 	text-decoration:none;
 	outline:none;
-	color:#FFF;
+	/*color:#FFF;*/
 	font-size:16px;
 	font-weight:700;
+	font-family: Montserrat;
 	text-align:center;
 	text-transform:uppercase;
 }
