fixing navbar header issues pt2

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -197,7 +197,7 @@
 
 .donate-btn-container {
 	/* width: '100%'; */
-	background-color: white;
+	background-color: #f0af00;
 	/* border-radius: 30; */
 	padding-top: 10!important;
 	text-align: center;
